Fix some spacing

--- a/css/carbon.scss
+++ b/css/carbon.scss
@@ -31,7 +31,7 @@
         left:0;
         text-align:left;
         display:inline-block;
-        font-size:6em;
+        font-size:4em;
     }
 
     h2:nth-of-type(even){
@@ -84,6 +84,7 @@
 		    color:#aaa;
 		    font-weight:normal;
 		    display:block;
+		    font-size:0.5em;
 		}
 	}
 
@@ -97,6 +98,10 @@
 	    font-size:3em;
     }
 
+    p {
+	    margin:1em;
+    }
+
     code {
 		color:#def;
 		background:#000;
@@ -107,6 +112,7 @@
 		font-family: "Hoefler Text", Constantia, Palatino, "Palatino Linotype", "Book Antiqua", Georgia, serif;
 		font-size:1.5em;
 		padding:1em 2em .5em 2em;
+		margin:1em;
 		color:#fff;
 		position:relative;
         text-align:center;
